--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap");
 
 /*  css variables */
@@ -53,4 +52,12 @@ ul {
 a {
   text-decoration: none;
   color: unset;
+}
+
+img{
+  width: 100%;
+}
+
+section {
+  padding: 60px 0px;
 }
