--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -32,6 +32,7 @@
     color: var(--primary-color);
     font-weight: 500;
     cursor: pointer;
+    text-decoration: none;
 }
 .nav__icons {
     display: flex !important;
