--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -77,3 +77,50 @@
     align-items: center !important;
     justify-content: center !important;
 }
+
+.sticky__header {
+    width: 100%;
+    height: 70px;
+    line-height: 70px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    box-shadow: 3px 3px 8px -3px #ddd;
+    /* background: var(--card-bg-01); */
+    background: #fff;
+}
+
+
+@media  only screen and (max-width:768px) {
+    .navigation {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.53);
+        z-index: 9999;
+        display: none;
+    }
+    .menu {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 250px;
+        height: 100%;
+        background: #fff !important;
+        z-index: 999999;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .active__menu {
+        display: block;
+    }
+    .mobile__menu {
+        display: block;
+        
+    }
+    
+}
