--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,126 +1,150 @@
-.header{
-    width: 100%;
-    height: 70px;
-    line-height: 70px;
+.header {
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
 }
 .nav__wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.logo{
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
+.logo {
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
 }
 .logo img {
-    width: 1.5rem;
-    height: 1.5rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 .logo h1 {
-    font-size: 1.2rem;
-    font-weight: 700;
-    color: var(--primary-color);
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: var(--primary-color);
 }
 .menu {
-    display: flex;
-    align-items: center;
-    column-gap: 2.7rem;
-    margin-bottom: 0;
+  display: flex;
+  align-items: center;
+  column-gap: 2.7rem;
+  margin-bottom: 0;
 }
-.nav__item a{
-    color: var(--primary-color);
-    font-weight: 500;
-    cursor: pointer;
-    text-decoration: none;
+.nav__item a {
+  color: var(--primary-color);
+  font-weight: 500;
+  cursor: pointer;
+  text-decoration: none;
 }
 .nav__icons {
-    display: flex !important;
-    align-items: center !important;
-    justify-content: center !important;
-    column-gap: 1.2rem !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  column-gap: 1.2rem !important;
 }
 .nav__icons span i {
-    font-size: 1.4rem !important;
-    color: var(--primary-color) !important;
+  font-size: 1.4rem !important;
+  color: var(--primary-color) !important;
 }
 .nav__icons span img {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 .mobile__menu {
-    font-size: 1.3rem;
-    color: var(--primary-color);
-    display: none;
+  font-size: 1.3rem;
+  color: var(--primary-color);
+  display: none;
 }
 .nav__active {
-    font-weight: 700 !important;
-
+  font-weight: 700 !important;
 }
-.cart__icon, .fav__icon {
-    position: relative !important;
+.cart__icon,
+.fav__icon {
+  position: relative !important;
 }
-.badge{
-    position: absolute;
-    width: 15px;
-    height: 15px;
-    top: 28% !important;
-    right: -8% !important;
-    content: "" !important;
-    background:var(--primary-color);
-    color: #fff !important;
-    border-radius: 50% !important;
-    font-size: 0.5rem !important;
-    font-weight: 600 !important;
-    z-index: 10 !important;
-    display: flex !important;
-    align-items: center !important;
-    justify-content: center !important;
+.badge {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  top: 28% !important;
+  right: -8% !important;
+  content: "" !important;
+  background: var(--primary-color);
+  color: #fff !important;
+  border-radius: 50% !important;
+  font-size: 0.5rem !important;
+  font-weight: 600 !important;
+  z-index: 10 !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
 }
 
 .sticky__header {
-    width: 100%;
-    height: 70px;
-    line-height: 70px;
-    position: sticky;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    box-shadow: 3px 3px 8px -3px #ddd;
-    /* background: var(--card-bg-01); */
-    background: #fff;
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  box-shadow: 3px 3px 8px -3px #ddd;
+  /* background: var(--card-bg-01); */
+  background: #fff;
 }
 
+@media only screen and (max-width: 768px) {
+  .navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.53);
+    z-index: 9999;
+    display: none;
+  }
+  .menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 100%;
+    background: #fff !important;
+    z-index: 999999;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-@media  only screen and (max-width:768px) {
-    .navigation {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0,0,0.53);
-        z-index: 9999;
-        display: none;
-    }
-    .menu {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 250px;
-        height: 100%;
-        background: #fff !important;
-        z-index: 999999;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    .active__menu {
-        display: block;
-    }
-    .mobile__menu {
-        display: block;
-        
-    }
+  .mobile__menu span i {
+    font-size: 1.1rem !important;
+  }
+
+  .active__menu {
+    display: block;
+  }
+  .mobile__menu {
+    display: block;
+  }
+  .logo img {
+    width: 1rem;
+    height: 1rem;
+  }
+  .logo h1 {
+    font-size: 1rem;
+  }
+  .fav__icon i, .cart__icon i {
+    font-size: 1.2rem !important;
+
+  }
+  .nav__icons span img {
+    width: 1.4rem;
+    height: 1.4rem;
+
+  }
+  .header {
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
     
+  }
 }
