--- a/src/styles/clock.css
+++ b/src/styles/clock.css
@@ -11,3 +11,18 @@
 .double__dote{
     font-size: 16px !important;
 }
+@media only screen and (max-width:992px) {
+    .clock__wrapper {
+        justify-content: center;
+    }
+    .clock__data h1{
+        font-size: 1.1rem !important;
+    }
+    .clock__data h5{
+        font-size: 0.9rem !important;
+    }
+}
+
+@media only screen and (max-width:768px) {
+
+}
