--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -61,3 +61,57 @@
     display: flex;
     align-items: center;
 }
+
+@media only screen and (max-width:992px) {
+    .hero__content h2{
+        font-size: 2rem;
+    }
+    .section__title {
+        font-size: 1.7rem;
+    }
+    .counter__img {
+        display: none;
+    }
+    .clock__top__content {
+        text-align: center;
+
+    }
+    .clock__top__content h4{
+        font-size: 0.9rem;
+    }
+    .clock__top__content h3{
+        font-size: 1rem;
+    }
+    .count__down-col .store_btn {
+        text-align: center !important;
+        display: inline-block !important;
+    }
+    
+}
+
+@media only screen and (max-width:768px) {
+    .hero__content h2{
+        font-size: 1.6rem;
+    }
+    .hero__content p {
+        font-size: 0.9rem;
+    }
+    .buy__btn a{
+        font-size: 0.9rem;
+    }
+    .section__title {
+        font-size: 1.4rem;
+    }
+    
+}
+@media only screen and (max-width:576px) {
+
+    .hero__content {
+        padding-top: 0;
+        margin-bottom: 40px;
+    }
+    .buy__btn a{
+        font-size: 0.9rem;
+    }
+    
+}
