--- a/src/styles/product-card.css
+++ b/src/styles/product-card.css
@@ -28,3 +28,20 @@
   color: inherit !important;
   text-decoration: none;
 }
+
+@media only screen and (max-width:992px) {
+  .product__info h3 a {
+    font-size: 1.1rem;
+
+  }
+}
+
+@media only screen and (max-width:768px) {
+  .product__info h3 a {
+    font-size: 1rem;
+  }
+  .product__card-bottom span i {
+    font-size: 1rem;
+    
+  }
+}
